# ALPACA-model

./: .gitignore  .gitmodules  ALPACA_model_class.py  ALPACA_segment_solution_class.py  README.md  alpaca_conda.yml  environment.yml  interactive_test.py  pyproject.toml  run_alpaca.py  run_example.py  run_single_case.py
alpaca/: ALPACA_model_class.py  ALPACA_segment_solution_class.py  __init__.py  __main__.py  analysis.py  make_configuration.py  run_alpaca.py  scripts.py  utils.py
alpaca/scripts/submodules/alpaca_input_formatting/: README.md  input_conversion.sh
alpaca/scripts/submodules/alpaca_input_formatting/convert_conipher_output/: convert_conipher_output.R
alpaca/scripts/submodules/alpaca_input_formatting/convert_refphase_output/: convert_refphase.py  extract_rephase_data.R  functions.py
data/input/example_cohort/TEST0001/: tree_paths.json
data/output/example_cohort/patient_outputs/: final_TEST0001.csv
dev/: ALPACA_model_class.py  README.md  interactive_test.py  parse_optional_args.py
dev/data/input/example_cohort/TEST0001/: ci_table.csv  cp_table.csv
dev/data/input/example_cohort/TEST0002/: ALPACA_input_table.csv  asas_table.csv
dev/data/output/example_cohort/cohort_outputs/: all_solutions_combined.csv
dev/data/output/example_cohort/patient_outputs/: final_TEST0001.csv
dev/todo/: convert_refphase.py
examples/: run_example.sh
examples/example_cohort/input/LTX0000-Tumour1/: LTX0000-Tumour1-refphase-results.RData
tests/: test_convert_conipher.sh  test_convert_refphase.sh  test_extract_refphase.sh  test_input_conversion.sh  test_run_alpaca_correct_input.sh  test_run_alpaca_redundant_columns.sh  test_run_alpaca_sample_name_mismatch.sh
tests/redundant_columns/input/LTX0000-Tumour1/: ALPACA_input_table.csv
tests/sample_name_mismatch/input/LTX0000-Tumour1/: cp_table.csv
(+1 files in other folders)
